refactor(RolesTest.java): 테스트 코드 추가
Roles에 대한 테스트를 진행하는 테스트 코드 추가